--- a/launcher/src/main/resources/com/skcraft/launcher/launcher.properties
+++ b/launcher/src/main/resources/com/skcraft/launcher/launcher.properties
@@ -16,6 +16,8 @@ assetsSource=http://resources.download.minecraft.net/
 yggdrasilAuthUrl=https://authserver.mojang.com/authenticate
 resetPasswordUrl=https://minecraft.net/resetpassword
 
-newsUrl=http://update.skcraft.com/template/news.html?version=%s
-packageListUrl=http://update.skcraft.com/template/packages.json?key=%s
-selfUpdateUrl=http://update.skcraft.com/template/launcher/latest.json
+newsUrl=https://www.lolnet.co.nz/modpack/news/
+packageListUrl=https://www.lolnet.co.nz/modpack/packagessettingonly.json?key=%s
+selfUpdateUrl=https://www.lolnet.co.nz/modpack/latest.json
+mainServerURL=https://www.lolnet.co.nz/
+backupServerURL=http://anderson.lolnet.co.nz:8082/
